--- a/QKDB92.ipynb
+++ b/QKDB92.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "from components import Network, Controller\n",
-    "from components.qkd.b92 import create_key, prepara_qubits_b92, apply_measurement_b92"
+    "from components.qkd.b92 import create_key, generate_bases, prepara_qubits_b92, apply_measurement_b92"
    ]
   },
   {
@@ -36,8 +36,8 @@
     "\n",
     "# Informações adicionais\n",
     "num_mensagens = 10\n",
-    "key_size = 100\n",
-    "diff_nodes = 3"
+    "key_size = 10\n",
+    "diff_nodes = 5"
    ]
   },
   {
@@ -50,55 +50,45 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Key gerada:      [0, 1, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1, 0, 1, 0, 0, 0, 1, 0, 1, 1, 1, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 1, 0, 1, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 1]\n",
-      "Shared Key:      [0, 0, 1, 1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 1, 1, 0]\n",
-      "Bits diferentes: 76\n",
+      "Key gerada:       [1, 1, 0, 1, 0, 0, 0, 1, 0, 1]\n",
+      "Shared Key:       [0]\n",
+      "Bits diferentes:  9\n",
       "\n",
+      "Key gerada:       [1, 1, 0, 0, 1, 1, 0, 1, 1, 0]\n",
+      "Shared Key:       [1, 0, 0, 1, 1, 0]\n",
+      "Bits diferentes:  4\n",
       "\n",
-      "Key gerada:      [0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 1, 0, 0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1, 1, 0, 1, 0, 0, 0]\n",
-      "Shared Key:      [1, 1, 1, 1, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0]\n",
-      "Bits diferentes: 80\n",
+      "Key gerada:       [1, 1, 0, 1, 0, 0, 0, 0, 1, 1]\n",
+      "Shared Key:       []\n",
+      "Bits diferentes:  10\n",
       "\n",
+      "Key gerada:       [1, 0, 1, 0, 0, 1, 1, 1, 0, 1]\n",
+      "Shared Key:       [1, 1]\n",
+      "Bits diferentes:  8\n",
       "\n",
-      "Key gerada:      [0, 1, 0, 1, 1, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 1, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 0, 1, 0, 0, 1, 0, 1, 0, 1, 1, 0, 0, 0, 1, 1, 1, 0, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1, 1]\n",
-      "Shared Key:      [1, 1, 0, 1, 0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 0, 0, 1, 1, 1, 1, 0, 0, 1, 0, 0, 0, 0, 1]\n",
-      "Bits diferentes: 69\n",
+      "Key gerada:       [0, 1, 0, 1, 0, 1, 1, 1, 1, 1]\n",
+      "Shared Key:       [0, 1, 0, 1]\n",
+      "Bits diferentes:  6\n",
       "\n",
+      "Key gerada:       [1, 1, 1, 1, 0, 1, 0, 0, 0, 1]\n",
+      "Shared Key:       [1]\n",
+      "Bits diferentes:  9\n",
       "\n",
-      "Key gerada:      [1, 1, 0, 0, 0, 1, 1, 1, 1, 0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 1, 0, 1, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1, 1, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0, 0, 1, 0, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 0, 1, 0, 0, 0, 0, 1, 1]\n",
-      "Shared Key:      [1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0, 1, 1, 0, 1]\n",
-      "Bits diferentes: 75\n",
+      "Key gerada:       [0, 1, 0, 1, 0, 0, 0, 0, 0, 0]\n",
+      "Shared Key:       [0, 1, 0]\n",
+      "Bits diferentes:  7\n",
       "\n",
+      "Key gerada:       [1, 1, 1, 1, 0, 0, 1, 1, 1, 1]\n",
+      "Shared Key:       []\n",
+      "Bits diferentes:  10\n",
       "\n",
-      "Key gerada:      [1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 1, 0, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0]\n",
-      "Shared Key:      [1, 0, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 1, 1, 0, 1, 0, 1, 0, 0]\n",
-      "Bits diferentes: 77\n",
+      "Key gerada:       [1, 1, 1, 0, 1, 0, 0, 1, 1, 0]\n",
+      "Shared Key:       [1]\n",
+      "Bits diferentes:  9\n",
       "\n",
-      "\n",
-      "Key gerada:      [0, 1, 0, 1, 1, 1, 0, 0, 1, 0, 1, 1, 0, 1, 0, 0, 0, 1, 1, 1, 0, 1, 0, 0, 0, 1, 0, 1, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 1, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 1, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1]\n",
-      "Shared Key:      [0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1]\n",
-      "Bits diferentes: 78\n",
-      "\n",
-      "\n",
-      "Key gerada:      [1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1, 1, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0, 1, 1, 1, 0, 0, 0, 0, 0, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 0, 0, 1, 1, 1, 1, 0, 1, 1, 0, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 0, 0, 0, 1, 1, 1]\n",
-      "Shared Key:      [0, 1, 1, 1, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 1, 1, 0, 0, 0, 0, 1, 1]\n",
-      "Bits diferentes: 77\n",
-      "\n",
-      "\n",
-      "Key gerada:      [0, 1, 1, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 0, 1, 0, 0, 1, 1, 0, 1, 1, 0, 1, 0, 1, 1, 1, 1, 0, 0, 1, 0, 0, 1, 0, 1, 0, 0, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 1, 0, 1, 0, 0, 1, 1, 0, 1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 0]\n",
-      "Shared Key:      [1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 1, 0]\n",
-      "Bits diferentes: 79\n",
-      "\n",
-      "\n",
-      "Key gerada:      [0, 1, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0, 1, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 1, 1, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 1]\n",
-      "Shared Key:      [1, 0, 1, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 0, 1]\n",
-      "Bits diferentes: 81\n",
-      "\n",
-      "\n",
-      "Key gerada:      [0, 0, 0, 0, 1, 0, 1, 0, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 0, 1, 1, 1, 0, 1, 0, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 1, 0, 0]\n",
-      "Shared Key:      [0, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 0]\n",
-      "Bits diferentes: 75\n",
-      "\n"
+      "Key gerada:       [1, 0, 1, 1, 0, 1, 0, 0, 0, 0]\n",
+      "Shared Key:       [1, 0, 0]\n",
+      "Bits diferentes:  7\n"
      ]
     }
    ],
@@ -111,24 +101,24 @@
     "    # Informações para Alice\n",
     "    key_alice = create_key(key_size)\n",
     "    \n",
+    "    # Informações para Bob\n",
+    "    bases_bob = generate_bases(key_size)\n",
+    "    \n",
     "    # Qubits\n",
     "    qubits = prepara_qubits_b92(key_alice)\n",
     "    \n",
     "    # Calculando a rota\n",
     "    route = controlador.calculate_route(alice, bob)\n",
-    "\n",
-    "    # Bob recebendo a chave\n",
-    "    received_qubits = rede.send_qubits(route, qubits)\n",
-    "    \n",
+    "        \n",
     "    # Bob mede os qubits\n",
-    "    measured_qubits, bases_bob = apply_measurement_b92(qubits)\n",
+    "    measured_qubits = apply_measurement_b92(qubits, bases_bob)\n",
     "    \n",
     "    # Print the results\n",
     "    results = f\"\"\"\n",
-    "Key gerada:      {key_alice}\n",
-    "Shared Key:      {measured_qubits}\n",
-    "Bits diferentes: {len(key_alice) - len(measured_qubits)}\n",
-    "\"\"\"\n",
+    "Key gerada:       {key_alice}\n",
+    "Shared Key:       {measured_qubits}\n",
+    "Bits diferentes:  {len(key_alice) - len(measured_qubits)}\"\"\"\n",
+    "    \n",
     "    print(results)"
    ]
   }
